# trialApp

./: .gitignore  README.md  integrated_workflow.js  package-lock.json  package.json  pyproject.toml  run.sh  run_frontend.sh  start_fastapi.py  start_services.sh  test-import.js
backend/: main.py  requirements.txt
client/: index.html
client/src/: App.tsx
client/src/components/: app-footer.tsx  app-header.tsx  error-state.tsx  loading-state.tsx  results-card.tsx  search-form.tsx  search-history.tsx
client/src/lib/: apiClient.ts  openai.ts
client/src/pages/: home.tsx
client/src/types/: index.ts
frontend/: next.config.js  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ErrorState.tsx  LoadingState.tsx  ResultsCard.tsx  SearchForm.tsx  SearchHistory.tsx
frontend/lib/: api.ts  types.ts
frontend/styles/: globals.css
public/: index.html
server/: index.ts  routes.ts  storage.ts
server/controllers/: reviewController.ts
server/services/: reviewService.ts
shared/: schema.ts
